[package]
name = "rusty_pong"
version = "0.1.0"
authors = [ "Basil Kohler <basil.kohler@gmail.com>" ]
edition = "2021"
description = "Open source terminal arcade game with audio - based off of the classic 'Pong'"
homepage = "https://github.com/basilkohler/rusty_pong"
repository = "https://github.com/basilkohler/rusty_pong"
readme = "README.md"
keywords = [ "terminal", "game", "audio", "rusty" ]
categories = [ "games", "command-line-utilities" ]
license = "MIT OR Apache-2.0"

[dependencies]
crossterm = "0.25.0"
rand = "0.8.5"
rusty_audio = "1.4.0"
rusty_time = "0.11.3"
